/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


syntax = "proto3";

option java_package = "org.apache.flink.modelserving.wine";

// Description of the wine.
message WineRecord {
    double fixed_acidity = 1;
    double volatile_acidity = 2;
    double citric_acid = 3;
    double residual_sugar = 4;
    double chlorides = 5;
    double free_sulfur_dioxide = 6;
    double total_sulfur_dioxide = 7;
    double density = 8;
    double pH = 9;
    double sulphates = 10;
    double alcohol = 11;
    // Data type for this record
    string dataType = 12;
}
